--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,54 @@
+html {
+  background-color:#03040c ;
+  box-sizing: border-box;
+  color: #fbfbfe;
+
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 * {
     font-family:Arial, Helvetica, sans-serif;
-    list-style: circle;
-    text-align: center;
+    list-style: none;
+   
+    /* text-align: center; */
+    
 }
+.cbomba, h1.box{
+  display: inline;
+}
+
+ul{
+  background-color: #0e1134;
+  width: fit-content;
+  margin: 0px;
+  border: 0px;
+  padding: 10px;
+  padding-right: 60px;
+   border-radius: 10px;
+}
+li{
+  font-size: 80px;
+  padding: 6px;
+}
+
 img {
 
   height :auto;
   width: 450px;
+  margin-left: 260px;
 }
-
 
 h1 {
-  
+  font-size: 100px;
+  width: fit-content;
+ padding: 100px;
+  margin-left: 10px;
   color: crimson;
+  align-content: center;
 }
+
